--- a/AppDev2ndCW/appsettings.Development.json
+++ b/AppDev2ndCW/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+
+  "ConnectionStrings": {
+    "DataBaseContext": "Server=(localdb)\\mssqllocaldb;Database=AppDev2ndCW;Trusted_Connection=True;"
+  },
+  "FeatureToggles": {
+    "DeveloperExceptions": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
