addition of view with controller

--- a/AppDev2ndCW/AppDev2ndCW.csproj
+++ b/AppDev2ndCW/AppDev2ndCW.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Books\" />
+    <Folder Include="Views\Sales\" />
+    <Folder Include="Views\Users\" />
+  </ItemGroup>
+
 </Project>
