changing dashboard UI and index page (temporary)

--- a/AppDev2ndCW/AppDev2ndCW.csproj
+++ b/AppDev2ndCW/AppDev2ndCW.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\vendor\Class.cs" />
+    <Content Remove="wwwroot\vendor\htmlpage.html" />
+    <Content Remove="wwwroot\vendor\index.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
