--- a/AppDev2ndCW/appsettings.Development.json
+++ b/AppDev2ndCW/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DataBaseContext": "Server=(localdb)\\mssqllocaldb;Database=AppDev2ndCW;Trusted_Connection=True;"
+    "DataBaseContext": "Server=localhost,1433;Initial Catalog=AppDev2ndCW;Persist Security Info=False;User ID=sa;Password=samyush@123;"
   },
   "FeatureToggles": {
     "DeveloperExceptions": true
