login error solved

--- a/AppDev2ndCW/appsettings.Development.json
+++ b/AppDev2ndCW/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
+  "ConnectionString": "Server=localhost;Database=AppDev2ndCW;Trusted_Connection=True;",
 
-  "ConnectionStrings": {
-    "DataBaseContext": "Server=(localdb)\\mssqllocaldb;Database=AppDev2ndCW;Trusted_Connection=True;"
-  },
   "FeatureToggles": {
     "DeveloperExceptions": true
   },
