--- a/AppDev2ndCW/appsettings.json
+++ b/AppDev2ndCW/appsettings.json
@@ -1,7 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DataBaseContext": "Server=(localdb)\\mssqllocaldb;Database=AppDev2ndCW;Trusted_Connection=True;"
-  },
+  "ConnectionString": "Server=localhost;Database=AppDev2ndCW;Trusted_Connection=True;",
+
   "FeatureToggles": {
     "DeveloperExceptions": true
   },
@@ -13,5 +12,5 @@
     }
   },
   "AllowedHosts": "*",
-  "NotificationProvider":  "toastr"
+  "NotificationProvider": "toastr"
 }
