--- a/AppDev2ndCW/Properties/launchSettings.json
+++ b/AppDev2ndCW/Properties/launchSettings.json
@@ -18,6 +18,8 @@
     "AppDev2ndCW": {
       "commandName": "Project",
       "launchBrowser": true,
+      //the below line sets the launch url for the app
+//      "launchUrl": "home/login",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
